--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
 				"init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
 				"test": "npm run test:html",
 				"test:html": "html-validate *.html",
-				"build": "npm-run-all build:* test",
+        "build": "npm-run-all build:* test",
+				"build:sass": "node-sass --output-style compact -o css sass",
 				"build:autoprefixer": "autoprefixer-cli css/style.css",
+				"build-dev": "npm-run-all build-dev:sass build:autoprefixer",
+				"build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
 				"watch": "npm-run-all build:* build-dev -p watch:*",
 				"watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
 		},
