--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
 				"init:dirs": "mkdirp sass css vendor images js",
 				"init:files": "touch README.md index.html sass/style.scss js/script.js",
 				"init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-				"test": "npm run test:html",
+				"test": "npm-run-all test:*",
 				"test:html": "html-validate *.html",
-        "build": "npm-run-all build:* test",
+				"test:js": "eslint /js",
+				"build": "npm-run-all build:* test",
 				"build:sass": "node-sass --output-style compact -o css sass",
 				"build:autoprefixer": "autoprefixer-cli css/style.css",
 				"build-dev": "npm-run-all build-dev:sass build:autoprefixer",
 				"build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
 				"watch": "npm-run-all build:* build-dev -p watch:*",
+				"watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\"",
 				"watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
 		},
 		"keywords": [],
@@ -23,12 +25,16 @@
 		"license": "ISC",
 		"dependencies": {},
 		"devDependencies": {
+				"@typescript-eslint/eslint-plugin": "^4.8.1",
 				"autoprefixer-cli": "^1.0.0",
 				"browser-sync": "^2.26.3",
-				"mkdirp": "^0.5.1",
-        "npm-run-all": "^4.1.5",
-        "node-sass": "^4.11.0",
+				"eslint": "^7.14.0",
 				"html-validate": "^2.8.0",
-				"onchange": "^5.2.0"
+				"mkdirp": "^0.5.1",
+				"node-sass": "^4.11.0",
+				"npm-run-all": "^4.1.5",
+				"onchange": "^5.2.0",
+				"stylelint": "^13.8.0",
+				"stylelint-scss": "^3.18.0"
 		}
 }
