--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
 				"init:dirs": "mkdirp sass css vendor images js",
 				"init:files": "touch README.md index.html sass/style.scss js/script.js",
 				"init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-				"test": "npm run test:html",
-				"test:html": "html-validate *.html",
+        "test": "npm-run-all test:*",
+        "test:html": "html-validate *.html",
+        "test:js": "eslint js/",
 				"build": "npm-run-all build:* test",
 				"build:autoprefixer": "autoprefixer-cli css/style.css",
 				"watch": "npm-run-all build:* build-dev -p watch:*",
@@ -26,6 +27,7 @@
 				"node-sass": "^4.11.0",
 				"npm-run-all": "^4.1.5",
 				"html-validate": "^2.8.0",
+      	"eslint": "^7.14.0",
 				"onchange": "^5.2.0"
 		}
 }
